# TIBCO-Messaging

./: LICENSE  README.md
dashboards/prometheus/: Prometheus-tibco-messaging-monitoring.datasource.json  README.md  config.yaml
eftl-android-sdk/: README.md
eftl-c-sdk/src/: CMakeLists.txt  base64.c  base64.h  buffer.h  cJSON.c  cJSON.h  eftl.c  eftl.h  hashmap.c  hashmap.c   hashmap.h  msg.c  msg.h  thread.c  thread.h  url.c  url.h  version.h  version.h.config  websocket.c  websocket.h
eftl-dotnet-sdk/TIBCO.EFTL/: CMakeLists.txt  Constants.cs  EFTL.cs  ICompletionListener.cs  IConnection.cs  IConnectionListener.cs  IKVMap.cs  IKVMapListener.cs  IMessage.cs  IRequestListener.cs  ISubscriptionListener.cs  TIBCO.EFTL.2.0.config  TIBCO.EFTL.3.0.config  TIBCO.EFTL.3.1.config  TIBCO.EFTL.3.4.config  TIBCO.EFTL.csproj  TIBCO.EFTL.sln  Version.cs.template  mainpage.dox.config  versions.txt
eftl-dotnet-sdk/TIBCO.EFTL.WINRT/: Constants.cs  (+10 more)
eftl-dotnet-sdk/TIBCO.EFTL/impl/: BasicSubscription.cs  IRequestListener.cs  JSONMessage.cs  KVMap.cs  MapContext.cs  ProtocolConstants.cs  ProtocolOpConstants.cs  PublishContext.cs  RequestContext.cs  SendRequestContext.cs  SkipList.cs  WebSocketConnection.cs
eftl-dotnet-sdk/TIBCO.EFTL/json/: JsonException.cs  JsonParser.cs
eftl-dotnet-sdk/TIBCO.EFTL/websocket/: WebSocket.cs  WebSocketListener.cs
eftl-golang-sdk/: CMakeLists.txt  conn.go  eftl.go  eftl.go.config  example_test.go  kvmap.go  msg.go  readme.txt
eftl-golang-sdk/examples/kvget/: kvget.go
eftl-golang-sdk/examples/kvremove/: kvremove.go
eftl-golang-sdk/examples/kvset/: kvset.go
eftl-golang-sdk/examples/lastValueSubscriber/: lastValueSubscriber.go
eftl-golang-sdk/examples/publisher/: publisher.go
eftl-golang-sdk/examples/reply/: reply.go
eftl-golang-sdk/examples/request/: request.go
eftl-golang-sdk/examples/sharedSubscriber/: sharedSubscriber.go
eftl-golang-sdk/examples/stopSubscriber/: stopSubscriber.go
eftl-golang-sdk/examples/subscriber/: subscriber.go
eftl-java-sdk/: CMakeLists.txt
eftl-java-sdk/src/com/tibco/eftl/: CompletionListener.java  Connection.java  ConnectionListener.java  EFTL.java  KVMapListener.java  Message.java  RequestListener.java  SubscriptionListener.java  Version.java.config
eftl-java-sdk/src/com/tibco/eftl/impl/: Base64.java  JSONMessage.java  MapRequest.java  ProtocolConstants.java  Publish.java  Request.java  RequestListener.java  SendRequest.java  Subscription.java  WebSocketConnection.java
eftl-java-sdk/src/com/tibco/eftl/json/: JsonArray.java  JsonException.java  JsonObject.java  JsonParser.java  JsonValue.java
eftl-java-sdk/src/com/tibco/eftl/websocket/: Base64.java  UpgradeException.java  UpgradeRequest.java  UpgradeResponse.java  WebSocket.java  WebSocketException.java  WebSocketFrame.java  WebSocketListener.java
eftl-javascript-sdk/: CMakeLists.txt  eftl.js  eftl_js.copyright
eftl-javascript-sdk/doc/javascript/: eFTL.html  eFTLConnection.html  eFTLKVMap.html  eFTLMessage.html  global.html  index.html
eftl-javascript-sdk/doc/javascript/styles/: jsdoc-default.css
eftl-javascript-sdk/jsdoc/: eftl_package.md  readme.md
eftl-javascript-sdk/jsdoc/tibcotemplate/tmpl/: details.tmpl  layout.tmpl
eftl-javascript-sdk/tests/: connection_reconnect.html  connection_simple.html  connection_simple_ssl.html  inbox_subscription.html  message_datatypes.html  subscribe_unsubscribe.html  tests.html  unit_test_template.html
eftl-nodejs-sdk/: README.md
eftl-objc-sdk/: CMakeLists.txt  mainpage.dox.config
eftl-objc-sdk/Classes/: eFTL.m  eFTLConnection.m  eFTLMessage.m  version.h.config
eftl-objc-sdk/Classes/SocketRocket/: SRWebSocket.h  SRWebSocket.m
eftl-objc-sdk/Headers/: eFTL.h  eFTLCompletionListener.h  eFTLConnection.h  eFTLConnectionListener.h  eFTLMessage.h  eFTLSubscriptionListener.h
eftl-objc-sdk/Tests/: eftl-tests-Info.plist  eftl-tests-Prefix.pch  eftl.cer  eftl_tests.h  eftl_tests.m
eftl-objc-sdk/eftl.xcodeproj/: project.pbxproj
eftl-python-sdk/: CMakeLists.txt  README.md  requirements.txt  setup.py  test_eftl.py
eftl-python-sdk/demo/: demo_mapGet.py  demo_mapSet.py  demo_receive.py  demo_send.py  readme.txt
eftl-python-sdk/docs/: connection.md  kvmap.md
eftl-python-sdk/eftl/: connection_base.py  kvmap.py
eftl-python-sdk/eftl/asyncio/: connection.py
eftl-python-sdk/eftl/twisted/: connection.py
eftl-python-sdk/messaging/eftl/: connection.py
eftl-python-sdk/messaging/eftl/doc/: connection.m.html
eftl/sdk/c/: CMakeLists.txt
eftl/sdk/c/src/: CMakeLists.txt  base64.c  base64.h  buffer.h  cJSON.c  cJSON.h  eftl.c  eftl.h.config  hashmap.c  hashmap.h  msg.c  msg.h  thread.c  thread.h  tibeftl.dll.rc.config  tibeftl.dll.rc.config   url.c  url.h  version.h  version.h.config  websocket.c  websocket.h
eftl/sdk/c/test/: msgtest.c
eftl/sdk/dotnet/doc/: CMakeLists.txt
eftl/sdk/java/: CMakeLists.txt
eftl/sdk/java/src/com/tibco/eftl/: CompletionListener.java  Connection.java  ConnectionListener.java  EFTL.java  KVMap.java  KVMapListener.java  Message.java  RequestListener.java  SubscriptionListener.java  Version.java.config
eftl/sdk/java/src/com/tibco/eftl/impl/: JSONMessage.java  MapRequest.java  ProtocolConstants.java  Publish.java  Request.java  SendRequest.java  Subscription.java  WebSocketConnection.java
eftl/sdk/java/src/com/tibco/eftl/json/: JsonArray.java  JsonException.java  JsonObject.java  JsonParser.java  JsonValue.java
eftl/sdk/java/src/com/tibco/eftl/websocket/: Base64.java  UpgradeException.java  UpgradeRequest.java  UpgradeResponse.java  WebSocket.java  WebSocketException.java  WebSocketFrame.java  WebSocketListener.java
eftl/sdk/javascript/: CMakeLists.txt  eftl.js  eftl_js.copyright
eftl/sdk/javascript/doc/javascript/: eFTL.html  eFTLConnection.html  eFTLKVMap.html  eFTLMessage.html  global.html  index.html
eftl/sdk/javascript/doc/javascript/styles/: jsdoc-default.css
eftl/sdk/javascript/jsdoc/: conf.json  eftl_package.md  readme.md
eftl/sdk/javascript/jsdoc/tibcotemplate/: publish.js
eftl/sdk/javascript/jsdoc/tibcotemplate/tmpl/: layout.tmpl
samples/: README.md
(+528 files in other folders)
